--- a/stylesheet/Jarditou.css
+++ b/stylesheet/Jarditou.css
@@ -1,15 +1,16 @@
- /*!
+/*
   Theme Name: Jarditou.css
 */
-@media only screen and (max-width: 768px) {    
+@media only screen and (max-width:768px) {    
 }
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(89, 89, 83);
+    color: rgb(18, 18, 16);
     background-color: rgb(234, 229, 226);
     margin: auto;
     -webkit-text-stroke: 1px rgb(90, 84, 84);
+    line-height: 200%;
 }
 
 .entete_g  {
@@ -42,11 +43,13 @@ header {
 .banniere{
     display: flex;
 }
+
 .nav {
     justify-content: space-around;
     display: flex;
     background-color: black ;
-    padding: 50px;
+    padding: 30px;
+    
 }
 
 .promo {
@@ -59,18 +62,20 @@ header {
 .body_gif {
     height:30%;
     width: 22.4%;
-    justify-content: right;
-     
- }
+    justify-content: right;    
+}
 
-a {
-    
+a {   
     font-family: 'Calibri', 'Trebuchet MS', sans-serif;
     color: white;
     -webkit-text-stroke: 0.09rem rgb(125, 158, 135);
     font-size: 45px;
     text-decoration-line: writing-mode;
-    width: 100px;   
+    width: 100px;  
+}
+
+a:hover{
+    color: rgb(18, 68, 33);
 }
 
 img {
@@ -91,7 +96,6 @@ legend {
 table {
     justify-content: space-between;
     display: flexbox;
-
     width: 100%;
 }
 
@@ -100,10 +104,11 @@ tr {
     background: #e2dfdf;
 }
 
-th, td {
+th,td {
     color: #666;
     text-align: center; 
     background: #d6d3d3;
+    margin-bottom: 0%;
 }
 
 .entete_tab {
