--- a/css/Jarditou.css
+++ b/css/Jarditou.css
@@ -1,8 +1,7 @@
 /*
   Theme Name: Jarditou.css
 */
-@media only screen and (max-width:768px) {    
-}
+@media only screen and (max-width:768px) {}
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -15,76 +14,86 @@ body {
     letter-spacing: 1px;
     overflow-x: auto;
     scrollbar-color: #151414 #201c29;
-    -webkit-overflow-scrolling: touch; 
+    -webkit-overflow-scrolling: touch;
 }
 
-.entete_g  {
+.entete_g {
     justify-content: left;
-    width: 700px;
-    height:200px;
+    width: 750px;
 }
 
 .entete_d {
     justify-content: right;
-    margin-left:280px; 
-    width: 400px;
+    margin-left: 800px;
+    width: 350px;
 }
 
 
 .slogan {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-left: 200px;
+    margin-left: 500px;
     color: rgb(88, 127, 99);
     -webkit-text-stroke: 2px rgb(68, 65, 65);
-    -webkit-text-stroke-color: #e0dada;
-    font-size: 80px;   
+    -webkit-text-stroke-color: #dfbcbc;
+    font-size: 70px;
 }
 
 header {
     display: flex;
     margin-top: 0%;
+    padding: 35px;
 }
 
-.banniere{
+.banniere {
     display: flex;
 }
 
-.nav {
-    justify-content: space-around;
+nav {
+
     display: flex;
-    background-color: black ;
+    background-color: black;
     padding: 30px;
-    
+    justify-content: space-around;
+    flex-direction: row;
+
 }
 
 .promo {
-    height: 75%;
+    height: 330px;
     width: 81.5%;
     justify-content: left;
 }
 
 
 .body_gif {
-    height:30%;
+    height: 330px;
     width: 22.4%;
-    justify-content: right;    
+    justify-content: right;
+    box-sizing: content-box;
 }
 
-a {   
+a {
     font-family: 'Calibri', 'Trebuchet MS', sans-serif;
     color: white;
     -webkit-text-stroke: 0.09rem rgb(125, 158, 135);
-    font-size: 45px;
-    text-decoration-line: writing-mode;
-    width: 100px;  
+    font-size: 35px;
+    text-decoration-line: none;
+    flex-flow: wrap;
 }
 
-a:hover{
+
+a:hover {
     color: rgb(18, 68, 33);
 }
 
 img {
     border: 0;
+}
+
+aside {
+    float: right;
+    height: 750px;
+    
 }
 
 form {
@@ -105,14 +114,15 @@ table {
 }
 
 tr {
-    color:#666;
+    color: #666;
     background: #e2dfdf;
     letter-spacing: 2px;
 }
 
-th,td {
+th,
+td {
     color: #666;
-    text-align: center; 
+    text-align: center;
     background: #d6d3d3;
     margin-bottom: 0%;
 }
@@ -128,12 +138,17 @@ label {
     height: 30px;
 }
 
-button {
-    width: 100px;
+input {
     height: 25px;
+    font-weight: 100;
+}
+.button {
+    font-size: medium;
+    width: 75px;
+    height:25px;
     display: flexbox;
     margin-left: 1.5em;
-    margin-bottom: 3em;    
+    margin-bottom: 3em;
 }
 
 button:hover {
@@ -142,8 +157,11 @@ button:hover {
 
 #text {
     margin: 4px;
+
 }
 
-h2,h3,p {
+h2,
+h3,
+p {
     margin-left: 10px;
 }
