--- a/css/Jarditou.css
+++ b/css/Jarditou.css
@@ -93,7 +93,7 @@ img {
 aside {
     float: right;
     height: 750px;
-    
+    visibility: collapse;  
 }
 
 form {
@@ -121,14 +121,12 @@ tr {
 
 th,
 td {
-    color: #666;
     text-align: center;
     background: #d6d3d3;
     margin-bottom: 0%;
 }
 
 .entete_tab {
-
     font-size: 25px;
     height: 100px;
     background: #b6adad;
@@ -142,6 +140,7 @@ input {
     height: 25px;
     font-weight: 100;
 }
+
 .button {
     font-size: medium;
     width: 75px;
@@ -157,7 +156,6 @@ button:hover {
 
 #text {
     margin: 4px;
-
 }
 
 h2,
