--- a/css/Jarditou.css
+++ b/css/Jarditou.css
@@ -1,14 +1,14 @@
 /*
   Theme Name: Jarditou.css
 */
-@media only screen and (max-width:768px) {}
+
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 10%;
     color: rgb(7, 7, 7);
     background-color: rgb(234, 229, 226);
-    margin: auto;
+    margin: 0.5%;
     -webkit-text-stroke: 1px rgb(11, 10, 10);
     line-height: 200%;
     letter-spacing: 1px;
@@ -19,57 +19,64 @@ body {
 
 .entete_g {
     justify-content: left;
-    width: 750px;
+    width: 40%;
+    height: 40%;
 }
 
 .entete_d {
     justify-content: right;
-    margin-left: 800px;
-    width: 350px;
+    display: flex;
+    width: 17%;
+    height: 45%;
+    margin-left: 20%;
 }
 
 
-.slogan {
+.titre {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-left: 500px;
+    font-size: xx-large;
+    text-align: center;
+    padding: 0.5%;
+    justify-content: center;
+    margin-left:1%;
     color: rgb(88, 127, 99);
-    -webkit-text-stroke: 2px rgb(68, 65, 65);
-    -webkit-text-stroke-color: #dfbcbc;
-    font-size: 70px;
+    -webkit-text-stroke: 2px rgb(239, 200, 200);
+    -webkit-text-stroke-color: 0.1rem #a87171;
+    font-size: 75px;
+    font-weight: 7s0px;
 }
 
 header {
     display: flex;
-    margin-top: 0%;
-    padding: 35px;
+    padding: 40px;
 }
 
 .banniere {
     display: flex;
+    margin-right: 5%;
 }
 
 nav {
-
-    display: flex;
     background-color: black;
-    padding: 30px;
-    justify-content: space-around;
-    flex-direction: row;
+    padding: 10px;
+}
 
+ul, li {
+    display: flex;
+    justify-content: space-around;
 }
 
 .promo {
-    height: 330px;
-    width: 81.5%;
+    height: 300px;
+    width: 74.5%;
     justify-content: left;
 }
 
 
 .body_gif {
-    height: 330px;
-    width: 22.4%;
+    height: 300px;
+    width: 24.9%;
     justify-content: right;
-    box-sizing: content-box;
 }
 
 a {
@@ -86,14 +93,14 @@ a:hover {
     color: rgb(18, 68, 33);
 }
 
-img {
-    border: 0;
+.accueil {
+    font-size: xx-large;
+    margin-left: 2%;
 }
 
 aside {
     float: right;
     height: 750px;
-    visibility: collapse;  
 }
 
 form {
@@ -121,12 +128,13 @@ tr {
 
 th,
 td {
+    color: #666;
     text-align: center;
     background: #d6d3d3;
-    margin-bottom: 0%;
 }
 
 .entete_tab {
+    justify-items: center;
     font-size: 25px;
     height: 100px;
     background: #b6adad;
@@ -144,7 +152,7 @@ input {
 .button {
     font-size: medium;
     width: 75px;
-    height:25px;
+    height: 25px;
     display: flexbox;
     margin-left: 1.5em;
     margin-bottom: 3em;
@@ -158,8 +166,126 @@ button:hover {
     margin: 4px;
 }
 
+caption {
+    justify-content: center;
+    font-size: xx-large;
+    padding: 2%;
+    font-family: 'Calibri', 'Trebuchet MS', sans-serif;
+    color: rgb(48, 43, 43);
+    -webkit-text-stroke: 0.09rem rgb(125, 158, 135);
+}
+
+h1 {
+    font-family: 'Calibri', 'Trebuchet MS', sans-serif;
+    color: rgb(27, 24, 24);
+    -webkit-text-stroke: 0.09rem rgb(125, 158, 135);    
+    font-size: xx-large;
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+    }
+
 h2,
 h3,
 p {
     margin-left: 10px;
+}
+
+
+/*Query_Responsive*/
+
+@media screen and (max-width:768px) 
+
+{
+
+
+    header {
+        padding: 0.1%;
+        margin-top: 1rem;
+        }
+
+    .entete_g {
+        justify-content: left;
+        width: 30%;
+        height: 20% ;
+    
+    }
+    
+    .entete_d {
+        justify-content: right;
+        width: 20%;
+        height: 5%;
+        margin-left: 10%;
+    }
+
+    nav {
+        width: 20%;
+        padding: 2%;
+    }
+
+    ul,
+    li {
+        display: inline-block;
+    }
+
+    a {
+        font-size: 20px;
+        text-decoration-line: none;
+    }
+
+
+    caption {
+        justify-content: center;
+        font-size: xx-large;
+        padding: 2%;
+    }
+    
+    h1 {
+            justify-content: center;
+            font-size: xx-large;
+            padding: 0.3%;
+        }
+    
+    
+    .titre {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align: center;
+        font-weight: 80%;
+        justify-content: center;
+        margin-left: 0.5%;
+        color: rgb(88, 127, 99);
+        -webkit-text-stroke: 1px rgb(239, 200, 200);
+        -webkit-text-stroke-color: 0.2rem #a87171;
+    }
+
+    aside {
+        display: none;
+    }
+
+    .promo {
+        height: 160px;
+        width: 70%;
+        justify-content: left;
+    }
+
+    .body_gif {
+        height: 160px;
+        width: 29%;
+        justify-content: right;
+    }
+
+    .slogan {
+        font-size: 38px;
+    }
+
+    table {
+        display: flexbox;
+        max-width: 100
+    }
+    
+    th {
+        font-size: 10px;
+    }
+
+
 }
